--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   "require": {
     "php": ">=5.3.0",
     "dywee/core-bundle": "dev-master",
-    "stof/doctrine-extensions-bundle": "^1.2"
+    "stof/doctrine-extensions-bundle": "^1.2",
+    "egeloen/ckeditor-bundle": "^4.0"
   },
   "autoload": {
     "psr-4": {
