--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,12 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "dywee/core-bundle": "dev-master",
+    "dywee/core-bundle": "^0.1",
     "stof/doctrine-extensions-bundle": "^1.2",
     "egeloen/ckeditor-bundle": "^4.0"
   },
   "require-dev": {
     "doctrine/doctrine-bundle": "^1.3",
-    "friendsofphp/php-cs-fixer": "^1.11",
-    "swiftmailer/swiftmailer": "^4.3 || ^5.0",
-    "symfony/phpunit-bridge": "^2.7 || ^3.0",
-    "symfony/validator": "^2.7 || ^3.0",
-    "symfony/yaml": "^2.7 || ^3.0",
-    "phpunit/phpunit": "~4.8|~5.0"
   },
   "autoload": {
     "psr-4": {
