--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "egeloen/ckeditor-bundle": "^4.0"
   },
   "require-dev": {
-    "doctrine/doctrine-bundle": "^1.3",
+    "doctrine/doctrine-bundle": "^1.3"
   },
   "autoload": {
     "psr-4": {
