--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "dywee/core-bundle": "^0.1",
+    "dywee/core-bundle": "0.1-dev",
     "stof/doctrine-extensions-bundle": "^1.2",
     "egeloen/ckeditor-bundle": "^4.0"
   },
@@ -24,6 +24,11 @@
   "autoload": {
     "psr-4": {
       "Dywee\\CMSBundle\\": ""
+    }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "0.1-dev"
     }
   }
 }
