--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,11 @@
     }
   ],
   "require": {
-    "php": ">=7.1.0",
-    "dywee/core-bundle": "dev-master",
+    "php": ">=7.4",
+    "dywee/core-bundle": "*",
     "stof/doctrine-extensions-bundle": "^1.2",
     "friendsofsymfony/jsrouting-bundle": "^2.3",
     "friendsofsymfony/ckeditor-bundle": "^2.0"
-  },
-  "require-dev": {
-    "doctrine/doctrine-bundle": "^1.3"
   },
   "autoload": {
     "psr-4": {
